update main nav colours/styles to fix visibility

--- a/sass/etna.scss
+++ b/sass/etna.scss
@@ -165,16 +165,29 @@ Modified to match the existing site (for now)
 }
 
 .tna-header__navigation-item-link {
+    color: $color--white;
+
+    &:visited {
+        color: $color--white;
+    }
+
     &:hover,
     &--selected,
     &--selected:visited {
         background: #fff !important;
+        color: $color--off-black;
+
+        &::after {
+            display: none;
+        }
     }
 }
 
 @include media.on-mobile {
     .tna-header__navigation-items {
         background: #fff !important;
+        color: $color--off-black;
+        border: 0;
     }
 }
 
